# mon-nlp

./: .gitignore  Makefile  README.md  pyproject.toml
src/mon_nlp/: __init__.py  abbreviation.py  case.py  cli.py  emoji.py  g2p.py  number.py  punctuation.py  transliterate.py
src/mon_nlp/data/: abbreviations.json  emojis.json  punctuations.json
tests/: test_abbreviation.py  test_case.py  test_emoji.py  test_g2p.py  test_number.py  test_punctuation.py  test_transliterate.py
